--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <p class="brief-intro">Exploring the intersection of language, cognition, and artificial intelligence at UPenn</p>
                     </div>
                     <div class="profile-image">
-                        <img src="images/Headshot.jpeg" alt="Mekides">
+                        <img src="./images/Headshot.jpeg" alt="Mekides">
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                                 </div>
                             </div>
                             <div class="image-placeholder">
-                                <img src="images/Award.jpeg" alt="Research and Awards" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
+                                <img src="./images/Award.jpeg" alt="Research and Awards" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
                             </div>
                         </div>
                     </div>
@@ -107,22 +107,22 @@
                                         <p>Exploring colors, textures, and emotions through various mediums</p>
                                         <div class="gallery">
                                             <div class="gallery-item">
-                                                <img src="images/Museum1.jpeg" alt="Museum Art 1" onclick="openImage(this.src)">
+                                                <img src="./images/Museum1.jpeg" alt="Museum Art 1" onclick="openImage(this.src)">
                                             </div>
                                             <div class="gallery-item">
-                                                <img src="images/Museum2.jpeg" alt="Museum Art 2" onclick="openImage(this.src)">
+                                                <img src="./images/Museum2.jpeg" alt="Museum Art 2" onclick="openImage(this.src)">
                                             </div>
                                             <div class="gallery-item">
-                                                <img src="images/Museum3.jpeg" alt="Museum Art 3" onclick="openImage(this.src)">
+                                                <img src="./images/Museum3.jpeg" alt="Museum Art 3" onclick="openImage(this.src)">
                                             </div>
                                             <div class="gallery-item">
-                                                <img src="images/Museum4.jpeg" alt="Museum Art 4" onclick="openImage(this.src)">
+                                                <img src="./images/Museum4.jpeg" alt="Museum Art 4" onclick="openImage(this.src)">
                                             </div>
                                             <div class="gallery-item">
-                                                <img src="images/Museum5.jpeg" alt="Museum Art 5" onclick="openImage(this.src)">
+                                                <img src="./images/Museum5.jpeg" alt="Museum Art 5" onclick="openImage(this.src)">
                                             </div>
                                             <div class="gallery-item">
-                                                <img src="images/Museum6.jpeg" alt="Museum Art 6" onclick="openImage(this.src)">
+                                                <img src="./images/Museum6.jpeg" alt="Museum Art 6" onclick="openImage(this.src)">
                                             </div>
                                         </div>
                                     </div>
@@ -132,22 +132,22 @@
                                         <p>Capturing moments and perspectives through the lens</p>
                                         <div class="gallery">
                                             <div class="gallery-item">
-                                                <img src="images/Sky1.jpeg" alt="Sky Photography 1" onclick="openImage(this.src)">
+                                                <img src="./images/Sky1.jpeg" alt="Sky Photography 1" onclick="openImage(this.src)">
                                             </div>
                                             <div class="gallery-item">
-                                                <img src="images/Sky2.jpeg" alt="Sky Photography 2" onclick="openImage(this.src)">
+                                                <img src="./images/Sky2.jpeg" alt="Sky Photography 2" onclick="openImage(this.src)">
                                             </div>
                                             <div class="gallery-item">
-                                                <img src="images/Sky3.jpeg" alt="Sky Photography 3" onclick="openImage(this.src)">
+                                                <img src="./images/Sky3.jpeg" alt="Sky Photography 3" onclick="openImage(this.src)">
                                             </div>
                                             <div class="gallery-item">
-                                                <img src="images/Sky4.jpeg" alt="Sky Photography 4" onclick="openImage(this.src)">
+                                                <img src="./images/Sky4.jpeg" alt="Sky Photography 4" onclick="openImage(this.src)">
                                             </div>
                                             <div class="gallery-item">
-                                                <img src="images/Sky5.jpeg" alt="Sky Photography 5" onclick="openImage(this.src)">
+                                                <img src="./images/Sky5.jpeg" alt="Sky Photography 5" onclick="openImage(this.src)">
                                             </div>
                                             <div class="gallery-item">
-                                                <img src="images/Sky6.jpeg" alt="Sky Photography 6" onclick="openImage(this.src)">
+                                                <img src="./images/Sky6.jpeg" alt="Sky Photography 6" onclick="openImage(this.src)">
                                             </div>
                                         </div>
                                     </div>
