--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mekides - Personal Website</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Dancing+Script:wght@700&family=Noto+Sans+Ethiopic:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="background-wrapper">
@@ -30,8 +30,11 @@
                 <div class="profile-container">
                     <div class="text-content">
                         <p class="greeting">Hello, I'm</p>
-                        <h1 class="main-title">Mekides</h1>
-                        <p class="roles">Ethiopian | Penn World Scholar | Rising Junior</p>
+                        <h1 class="main-title">
+                            <span class="typing-text"></span>
+                            <span class="cursor">|</span>
+                        </h1>
+                        <p class="roles">Ethiopian | Rising Junior | Penn World Scholar</p>
                         <p class="brief-intro">Exploring the intersection of language, cognition, and artificial intelligence at UPenn</p>
                     </div>
                     <div class="profile-image">
@@ -58,8 +61,8 @@
                         <div class="content-wrapper">
                             <div class="text-content">
                                 <h3>About Me</h3>
-                                <p>Hi, I'm Mekides — a rising junior at the University of Pennsylvania majoring in Computational Cognitive Science with a minor in Linguistics. I'm passionate about the intersection of language and technology, especially in the field of Natural Language Processing (NLP).</p>
-                                <p>Currently, I'm conducting NLP research under Professor Chris Callison-Burch at Penn, where I explore how machines understand and generate human language. This fascinating work combines my interests in cognitive science, linguistics, and artificial intelligence.</p>
+                                <p>Hi, I'm Mekides! I'm a rising junior at the University of Pennsylvania, studying Computational Cognitive Science and minoring in Linguistics. I'm really interested in how language and technology work together, especially in Natural Language Processing (NLP).</p>
+                                <p>Right now, I'm doing research in NLP with Professor Chris Callison-Burch at Penn. I'm learning how computers can understand and create human language, which connects to my interests in how the mind works, how language works, and how smart machines are built.</p>
                             </div>
                             <div class="image-placeholder">
                                 <img src="images/tabb2.jpeg" alt="About Me Image" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
@@ -73,7 +76,7 @@
                                 <h3>Research & Achievements</h3>
                                 <div class="experience-item">
                                     <h4>NLP Research at Penn</h4>
-                                    <p>Working with Professor Chris Callison-Burch on cutting-edge natural language processing research, exploring the frontiers of human-machine communication.</p>
+                                    <p>I'm working with Professor Chris Callison-Burch on research in natural language processing, focusing on how machines can better understand and work with human language across different contexts and languages.</p>
                                 </div>
                                 <div class="experience-item">
                                     <h4>GRASP Lab</h4>
@@ -85,7 +88,7 @@
                                 </div>
                             </div>
                             <div class="image-placeholder">
-                                <img src="./images/Award.jpeg" alt="Research and Awards" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
+                                <img src="./images/Award.jpeg" alt="Research and Awards" class="award-image" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
                             </div>
                         </div>
                     </div>
@@ -94,12 +97,12 @@
                         <div class="content-wrapper">
                             <div class="text-content">
                                 <h3>Creative Pursuits</h3>
-                                <p>Beyond academics, I find inspiration in various forms of creative expression. I believe creativity and technology go hand in hand — and I love using both to explore and express new ideas.</p>
+                                <p>Outside of school, I enjoy being creative in different ways like drawing, painting, and taking photos. I believe creativity and technology can work really well together. I like using them to try out new ideas, learn new things, and share my thoughts in fun and interesting ways.</p>
                                 <div class="hobbies-container">
                                     <div class="hobbies-nav">
                                         <button class="hobby-nav-btn active" onclick="showGallery('art')">Art & Painting</button>
                                         <button class="hobby-nav-btn" onclick="showGallery('photo')">Photography</button>
-                                        <button class="hobby-nav-btn" onclick="showGallery('reading')">Historical Reading</button>
+                                        <button class="hobby-nav-btn" onclick="showGallery('reading')">Reading Books</button>
                                     </div>
 
                                     <div id="art" class="gallery-section active">
@@ -129,7 +132,7 @@
 
                                     <div id="photo" class="gallery-section">
                                         <h4>Photography</h4>
-                                        <p>Capturing moments and perspectives through the lens</p>
+                                        <p>I enjoy taking pictures of the sky.</p>
                                         <div class="gallery">
                                             <div class="gallery-item">
                                                 <img src="./images/Sky1.jpeg" alt="Sky Photography 1" onclick="openImage(this.src)">
@@ -153,17 +156,14 @@
                                     </div>
 
                                     <div id="reading" class="gallery-section">
-                                        <h4>Historical Reading</h4>
-                                        <p>Diving into books that uncover the stories of our past</p>
+                                        <h4>Reading Books</h4>
+                                        <p>I enjoy reading books about Ethiopian history and the Ethiopian Orthodox Church. Learning about the past helps me understand my culture better, and I find the stories and traditions very meaningful.</p>
                                     </div>
                                 </div>
 
                                 <div id="imageModal" class="image-modal" onclick="closeImage()">
-                                    <img id="modalImage" src="" alt="Full size image">
+                                    <img id="modalImage" src="" alt="">
                                 </div>
-                            </div>
-                            <div class="image-placeholder">
-                                <div class="placeholder-text">Creative Work Coming Soon</div>
                             </div>
                         </div>
                     </div>
@@ -208,6 +208,51 @@
         </div>
     </footer>
     <script>
+        // Typing animation
+        const texts = ['Mekides', 'መቅደስ'];
+        let textIndex = 0;
+        let charIndex = 0;
+        let isDeleting = false;
+        let isPaused = false;
+        const typingDelay = 150;
+        const erasingDelay = 100;
+        const newTextDelay = 2000;
+
+        function type() {
+            const currentText = texts[textIndex];
+            const typingElement = document.querySelector('.typing-text');
+
+            if (isDeleting) {
+                // Removing characters
+                typingElement.textContent = currentText.substring(0, charIndex - 1);
+                charIndex--;
+            } else {
+                // Adding characters
+                typingElement.textContent = currentText.substring(0, charIndex + 1);
+                charIndex++;
+            }
+
+            // Determine next timeout
+            let timeout = isDeleting ? erasingDelay : typingDelay;
+
+            // Check if word is complete
+            if (!isDeleting && charIndex === currentText.length) {
+                // Add pause at end of word
+                timeout = newTextDelay;
+                isDeleting = true;
+            } else if (isDeleting && charIndex === 0) {
+                isDeleting = false;
+                textIndex = (textIndex + 1) % texts.length;
+            }
+
+            setTimeout(type, timeout);
+        }
+
+        // Start the typing animation when the page loads
+        document.addEventListener('DOMContentLoaded', function() {
+            setTimeout(type, newTextDelay);
+        });
+
         function showGallery(galleryId) {
             // Hide all galleries
             document.querySelectorAll('.gallery-section').forEach(section => {
