--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 </div>
                             </div>
                             <div class="image-placeholder">
-                                <img src="./images/Award.jpeg" alt="Research and Awards" class="award-image" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
+                                <img src="./images/Award.jpeg" alt="Research and Awards" class="award-image">
                             </div>
                         </div>
                     </div>
